Удалил дублирующий less-файл стилей и изменил подключение в index.html на css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Simpsons</title>
 		<link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.css">
-		<link rel="stylesheet/less" type="text/css" href="styles/styles.less">
-		<script src="lib/less.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	</head>
 	<body>
 		<div class="wrapp-all">
@@ -168,14 +167,14 @@
 								</a>
 							</div>
 							<div class="depiction">
-								<p class="date-publication">23-08-2015 | 
+								<p class="date-publication">23-08-2015 |
 									<a href="#" class="ref">Игры Симпсоны</a>
 								</p>
 								<h4 class="games-heading">
 									<a href="#" class="reference-series ref">Погоня за пончиками 2</a>
 								</h4>
 								<p class="game-description">
-									Онлайн игра гонки "В погоне за пончиками 2". Гомер Симпсон за рулем розового семейного авто колесит по холмам Спрингфилда и собирает пончики. 	Главное, не упасть в реку и прийти вовремя к финишу. Соби... 
+									Онлайн игра гонки "В погоне за пончиками 2". Гомер Симпсон за рулем розового семейного авто колесит по холмам Спрингфилда и собирает пончики. 	Главное, не упасть в реку и прийти вовремя к финишу. Соби...
 									<a href="#" class="ref">»»»</a>
 								</p>
 							</div>
@@ -187,14 +186,14 @@
 								</a>
 							</div>
 							<div class="depiction">
-								<p class="date-publication">22-08-2015 | 
+								<p class="date-publication">22-08-2015 |
 									<a href="#" class="ref">Игры Симпсоны</a>
 								</p>
 								<h4 class="games-heading">
 									<a href="#" class="reference-series ref">Гомер - убийца Фландерсов</a>
 								</h4>
 								<p class="game-description">
-									Онлайн игра "Гомер - убийца Фландерсов". Гомер Симпсон с дробовиком наперевес отстреливает семью Фландерса. Главный босс - демон-Фландерс. ... ...  
+									Онлайн игра "Гомер - убийца Фландерсов". Гомер Симпсон с дробовиком наперевес отстреливает семью Фландерса. Главный босс - демон-Фландерс. ... ...
 									<a href="#" class="ref">»»»</a>
 								</p>
 							</div>
@@ -206,14 +205,14 @@
 								</a>
 							</div>
 							<div class="depiction">
-								<p class="date-publication">21-08-2015 | 
+								<p class="date-publication">21-08-2015 |
 									<a href="#" class="ref">Игры Симпсоны</a>
 								</p>
 								<h4 class="games-heading">
 									<a href="#" class="reference-series ref">Гомер Симпсон корчит рожи</a>
 								</h4>
 								<p class="game-description">
-									Смешная онлайн игра "Гомер Симпсон корчит рожи". Просто нажмите по персонажу левой кнопкой мыши. и он скорчит очередную гримасу. ... ...  
+									Смешная онлайн игра "Гомер Симпсон корчит рожи". Просто нажмите по персонажу левой кнопкой мыши. и он скорчит очередную гримасу. ... ...
 									<a href="#" class="ref">»»»</a>
 								</p>
 							</div>
@@ -298,7 +297,7 @@
 			<footer class="footer">
 					<p>&#169; The Simpsons, 2016</p>
 					<p class="time">Время: 0.1389 | SQL: 20 | Память: 8.18MB | Вход</p>
-			</footer> 
+			</footer>
 		</div>
 	</body>
 </html>
